# ansible-role-vscode

./: .pre-commit-config.yaml  .travis.yml  .yamllint.yml  README.md  pyproject.toml  requirements.yml  tasks.yml
defaults/: main.yml
meta/: main.yml
molecule/all/: molecule.yml
molecule/default/: molecule.yml
molecule/kvm/: molecule.yml
molecule/podman/: molecule.yml  prepare.yml
molecule/shared/: playbook.yml  prepare.yml  yamllint.yml
molecule/tests/: test_code.py  test_extensions.py  test_settings.py
molecule/vbox/: molecule.yml  prepare.yml
tasks/: install-apt.yml  install-pacman.yml  main.yml  tasks.yml
templates/: settings.json.j2
vars/: Archlinux.yml  Debian.yml
